--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name - Personal Website</title>
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <div class="nav-content">
+                <a href="index.html" class="active">Home</a>
+                <a href="pages/publications.html">Publications</a>
+                <a href="pages/blog.html">Blog</a>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <section class="hero">
+            <div class="background-image"></div>
+            <div class="content-wrapper">
+                <div class="text-content">
+                    <h1>Your Name</h1>
+                    <p class="subtitle">Your Title or Tagline</p>
+                    <div class="social-links">
+                        <a href="#" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                        <a href="#" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+                        <a href="#" target="_blank" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
+                        <a href="#" title="Download CV"><i class="fas fa-file-alt"></i></a>
+                    </div>
+                </div>
+                <div class="profile-image">
+                    <img src="images/profile/placeholder.jpg" alt="Your Name">
+                </div>
+            </div>
+        </section>
+
+        <section class="about">
+            <h2>About Me</h2>
+            <p>Your brief introduction goes here. Keep it concise and engaging. Highlight your key interests and expertise.</p>
+        </section>
+
+        <section class="news">
+            <h2>Latest News</h2>
+            <div class="news-items">
+                <div class="news-item">
+                    <span class="date">February 2024</span>
+                    <p>Your latest news or update goes here.</p>
+                </div>
+                <!-- Add more news items as needed -->
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Your Name. All rights reserved.</p>
+    </footer>
+
+    <script src="js/main.js"></script>
+</body>
+</html>
