--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <div class="background-image"></div>
             <div class="content-wrapper">
                 <div class="text-content">
-                    <h1>Your Name</h1>
-                    <p class="subtitle">Your Title or Tagline</p>
+                    <h1>Grigorii Veviurko</h1>
+                    <p class="subtitle">AI Researcher & Math Enthusiast </p>
                     <div class="social-links">
                         <a href="#" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
                         <a href="#" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="profile-image">
-                    <img src="images/profile/placeholder.jpg" alt="Your Name">
+                    <img src="images/profile/me.jpg" alt="Your Name">
                 </div>
             </div>
         </section>
