--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a href="https://www.linkedin.com/in/grivurko/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/veviurko" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
                         <a href="https://scholar.google.com/citations?user=2jVnBAIAAAAJ&hl=en" target="_blank" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
-                        <a href="#" title="Download CV"><i class="fas fa-file-alt"></i></a>
+                        <a href="/data/cv.pdf" target="_blank" title="View CV"><i class="fas fa-file-alt"></i></a>
                     </div>
                 </div>
                 <div class="profile-image">
