Added Google Analytics

--- a/index.html
+++ b/index.html
@@ -1,6 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Person",
+          "name": "Grigorii Veviurko",
+          "jobTitle": "AI Researcher",
+          "url": "https://grivurko.github.io",
+          "sameAs": [
+            "https://www.linkedin.com/in/grivurko/",
+            "https://github.com/veviurko",
+            "https://scholar.google.com/citations?user=2jVnBAIAAAAJ&hl=en"
+          ]
+        }
+        </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZXEL0LFX89"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXXXXXX');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
