--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
           ]
         }
         </script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZXEL0LFX89"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-XXXXXXXXXX');
-    </script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZXEL0LFX89"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+        
+          gtag('config', 'G-ZXEL0LFX89');
+        </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
